--- a/.github/workflows/deploy-infra-and-apps.yml
+++ b/.github/workflows/deploy-infra-and-apps.yml
@@ -46,7 +46,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: backend-app
-          path: ./backend/publish
+          path: ./backend/ParkNDeploy.Api/publish
 
   deploy_infrastructure:
     runs-on: ubuntu-latest
