--- a/.github/workflows/deploy-infra-and-apps.yml
+++ b/.github/workflows/deploy-infra-and-apps.yml
@@ -23,6 +23,8 @@ jobs:
         run: |
           npm install
           npm run build
+        env:
+          APP_VERSION: ${{ github.ref_name }}
         working-directory: ./frontend
       - name: Upload Frontend Artifact
         uses: actions/upload-artifact@v4
